Bug 80058 - Completion of function with a dot in the name, inserts wrong name: part before the dot appears twice
Summary: Completion of function with a dot in the name, inserts wrong name: part befor...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.0.0.beta1
Hardware: Other Linux (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.4.0 target:4.3.2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-06-15 19:13 UTC by Cor Nouws
Modified: 2014-11-11 19:52 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2014-06-15 19:13:38 UTC
- open spreadsheet
- type =F. 
- autocomplete pop-up shows F.DIST()
- Enter to accept this
 > cell now has =f.F.DIST()

I see this in Dutch Locale (=SOM.ALS()) and English
Comment 1 Cor Nouws 2014-06-15 19:14:33 UTC
was OK in 4.3.0 alpha1
testing on Linux
Comment 2 Winfried Donkers 2014-06-19 05:55:07 UTC
Is OK in master too.
Comment 3 Markus Mohrhard 2014-07-31 23:37:36 UTC
It is still broken in master and I think I found the problem. During the replacement we set the selection to the word boundaries which of course don't make sense with a dot in the name.

I just need to find an editeng method that does the same but does not assume that a dot is a word boundary.
Comment 4 Winfried Donkers 2014-08-01 16:14:05 UTC
(In reply to comment #3)
> It is still broken in master and I think I found the problem. During the
> replacement we set the selection to the word boundaries which of course
> don't make sense with a dot in the name.
> 
> I just need to find an editeng method that does the same but does not assume
> that a dot is a word boundary.

@Markus: I don't have any time to look into things, but you could take a look at the fix for bug #75264, sc/source/ui/app/inputhdl.cxx. The fix did work fine with different locales. It might help...
Comment 5 Markus Mohrhard 2014-08-03 20:14:59 UTC
(In reply to comment #4)
> (In reply to comment #3)
> > It is still broken in master and I think I found the problem. During the
> > replacement we set the selection to the word boundaries which of course
> > don't make sense with a dot in the name.
> > 
> > I just need to find an editeng method that does the same but does not assume
> > that a dot is a word boundary.
> 
> @Markus: I don't have any time to look into things, but you could take a
> look at the fix for bug #75264, sc/source/ui/app/inputhdl.cxx. The fix did
> work fine with different locales. It might help...

The problem is different. In my case I have to fix the editeng selection handling and work around the word boundary problem. The bug 75264 bug only had to deal with an OUString.
Comment 6 Commit Notification 2014-08-05 00:07:01 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5e2b4da10caaa15ee7e846c42ada2a20218d9591

handle autocomplete with dot in formula name, fdo#80058



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2014-08-08 12:18:57 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dceb53e0c6d2e7485cfc3ea59b5c125e6640930b&h=libreoffice-4-3

handle autocomplete with dot in formula name, fdo#80058


It will be available in LibreOffice 4.3.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.