handle autocomplete with dot in formula name, fdo#80058

The problem is that a dot is a word separator so the break iterator
provided by ICU will think that the dot separates two words whereas it
is part of the name here.

Change-Id: I73cee4304f83888b1645fec7b1851b9f42ef879f
(cherry picked from commit 5e2b4da10caaa15ee7e846c42ada2a20218d9591)
Signed-off-by: Eike Rathke <erack@redhat.com>